# VideoProcessing

./: .gitignore  CMakeLists.txt  README.md  play_video.sh  process_video.sh
dependency/wxWidgets/src/stc/lexilla/: .travis.yml  CONTRIBUTING
dependency/wxWidgets/src/stc/lexilla/test/: TestLexers.vcxproj
dependency/wxWidgets/src/stc/lexilla/test/unit/: UnitTester.vcxproj
src/: DCTCompressor.cpp  DCTCompressor.h  Video2AudioPlayer.cpp  decoderMain.cpp  encoderMain.cpp
